@@ -3,6 +3,9 @@
 * Use pkg_resources to parse the entry points file to allow names with
   colons (:pull:`3901`)
 
+* Return a failing exit status when `pip install`, `pip download`, or
+  `pip wheel` is called with no requirements. (:issue:`2720`, :pull:`2721`)
+
 **9.0.1 (2016-11-06)**
 
 * Correct the deprecation message when not specifying a --format so that it
